2001-11-21  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add panel-applet.c to libpanel-applet 
	sources - hmmm.

	* menu.c:
	(add_test_bonobo_applet): take an iid to be generic.
	(make_add_submenu): add an menuitem for the fish. Jeez, I need
	to get this applets menu work soon.

	* panel-applet.h: fix party pooper.

	* test-bonobo-applet.c: remove debugging rubish. Use
	G_CALLBACK instead of (GCallback) cast.

2001-11-21  Glynn Foster  <glynn.foster@sun.com>

	* aligned-widget.c, basep-widget.c, menu-fentry.c,
	panel-widget.c: 

	Moving over to g_signal. Part One of a many taled epic.

Tue Nov 20 19:37:15 2001  Owen Taylor  <otaylor@redhat.com>

	* quick-desktop-reader.h: Change include to glib-object.h.

2001-11-20  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: build libpanel-applet-2 with the new
	applet stuff. Install the new headers.

2001-11-20  Mark McLoughlin  <mark@skynet.ie>

	Use BonoboProperty bags ... sigh ... someone shoulda told me ...

	* panel-applet-frame.c: 
	(panel_applet_frame_change_orient),
	(panel_applet_frame_change_size),
	(panel_applet_frame_change_background_pixmap),
	(panel_applet_frame_change_background_colour),
	(panel_applet_frame_clear_background): use bonobo_pbclient_*
	(panel_applet_frame_construct): get property bag.

	* panel-applet-shell.c, panel-applet-private.h:
	kill useless functions, we now have a very useful useless
	PanelAppletShell object. 

	* panel-applet.c: 
	(panel_applet_parse_colour), (panel_applet_get_prop),
	(panel_applet_set_prop), (panel_applet_property_bag): impl
	property bag stuff.
	(panel_applet_class_init): tweak signal defs.
	(panel_applet_construct): setup the property bag.

	* panel-widget.c: (panel_widget_class_init): tweak signal def.

	* test-bonobo-applet.c:
	(test_applet_new): do a size change so the entry will have
	some text before it gets a size change.

	* Makefile.am: add panel-applet.h to glib-mkenus list.

2001-11-19  Mark McLoughlin  <mark@skynet.ie>
