@@ -1674,9 +1674,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 			ii = gnome_desktop_item_new_from_file (sim->item_loc, 0, NULL);
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME 
-			gtk_widget_lock_accelerators (menuitem); 
-			*/ 
 			if ( ! sim->applet)
 				setup_menuitem (menuitem, 0,
 						_("Add this launcher to panel"));
@@ -1690,9 +1687,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 
 			if ( ! sim->applet) {
 				menuitem = gtk_menu_item_new ();
-				/* FIXME 
-				gtk_widget_lock_accelerators (menuitem);
-				*/
 				setup_menuitem (menuitem, 0,
 						_("Add this to Favorites menu"));
 				gtk_menu_shell_append (GTK_MENU_SHELL (sim->menu), menuitem);
@@ -1705,9 +1699,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 			}
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 0,
 					_("Remove this item"));
 			gtk_menu_shell_append (GTK_MENU_SHELL (sim->menu), menuitem);
@@ -1725,9 +1716,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 
 			if ( ! sim->applet) {
 				menuitem = gtk_menu_item_new ();
-				/* FIXME 
-				gtk_widget_lock_accelerators (menuitem);
-				*/
 				setup_menuitem (menuitem, 0,
 						_("Put into run dialog"));
 				gtk_menu_shell_append (GTK_MENU_SHELL (sim->menu),
@@ -1757,9 +1745,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 				g_free (tmp);
 
 				menuitem = gtk_menu_item_new ();
-				/* FIXME 
-				gtk_widget_lock_accelerators (menuitem);
-				*/ 
 				name = gnome_desktop_item_get_localestring (ii, GNOME_DESKTOP_ITEM_NAME);
 				title = g_strdup_printf (_("Help on %s"),
 							 (name != NULL) ? name : _("Application"));
@@ -1779,9 +1764,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 			}
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME 
-			gtk_widget_lock_accelerators (menuitem);
-			*/ 
 			/*when activated we must pop down the first menu*/
 			gtk_signal_connect_object(GTK_OBJECT(menuitem),
 						  "activate",
@@ -1811,9 +1793,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 								   TRUE));
 
 				menuitem = gtk_menu_item_new ();
-				/* FIXME
-				gtk_widget_lock_accelerators (menuitem);
-				*/
 				setup_menuitem (menuitem, 0,
 						_("Entire menu"));
 				gtk_menu_shell_append (GTK_MENU_SHELL (sim->menu), menuitem);
@@ -1823,9 +1802,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 0,
 					_("Add this as drawer to panel"));
 			gtk_menu_shell_append (GTK_MENU_SHELL (submenu), menuitem);
@@ -1834,9 +1810,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 				   sim->mf);
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME 
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 0,
 					_("Add this as menu to panel"));
 			gtk_menu_shell_append (GTK_MENU_SHELL (submenu), menuitem);
@@ -1844,9 +1817,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 					   GTK_SIGNAL_FUNC(add_menu_to_panel),
 					   sim->mf->menudir);
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 0,
 					_("Add this to Favorites menu"));
 			gtk_menu_shell_append (GTK_MENU_SHELL (submenu), menuitem);
@@ -1858,9 +1828,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 				gtk_widget_set_sensitive(menuitem, FALSE);
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 0,
 					_("Add new item to this menu"));
 			gtk_menu_shell_append (GTK_MENU_SHELL (submenu), menuitem);
@@ -1877,9 +1844,6 @@ show_item_menu (GtkWidget *item, GdkEventButton *bevent, ShowItemMenu *sim)
 
 
 			menuitem = gtk_menu_item_new ();
-			/* FIXME 
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			/*when activated we must pop down the first menu*/
 			gtk_signal_connect_object(GTK_OBJECT(menuitem),
 						  "activate",
@@ -2948,9 +2912,6 @@ start_favourites_menu (GtkWidget *menu,
 
 	/* Add the favourites stuff here */
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem,
 				   "launcher-program.png",
 				   /* Add to favourites */
@@ -3073,9 +3034,6 @@ create_menuitem (GtkWidget *menu,
 	}
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	if (sub) {
 		gtk_menu_item_set_submenu (GTK_MENU_ITEM(menuitem), sub);
 		gtk_signal_connect(GTK_OBJECT(sub), "show",
@@ -3282,9 +3240,6 @@ create_menu_at_fr (GtkWidget *menu,
 		//if we actually added anything
 		if (first_item < g_list_length(GTK_MENU_SHELL(menu)->children)) {
 			menuitem = gtk_menu_item_new();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			gtk_menu_shell_insert(GTK_MENU_SHELL(menu),menuitem,first_item);
 			gtk_widget_show(menuitem);
 			gtk_widget_set_sensitive(menuitem,FALSE);
@@ -3312,9 +3267,6 @@ create_menu_at_fr (GtkWidget *menu,
 			gtk_widget_show (pixmap);
 
 		menuitem = title_item_new();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_title_menuitem (menuitem, pixmap, menu_name, mf);
 		gtk_menu_shell_insert (GTK_MENU_SHELL (menu), menuitem, first_item);
 
@@ -3328,9 +3280,6 @@ create_menu_at_fr (GtkWidget *menu,
 	/*add separator*/
 	if (add_separator) {
 		menuitem = gtk_menu_item_new();	
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		gtk_menu_shell_insert(GTK_MENU_SHELL(menu), menuitem, first_item);
 		gtk_widget_show(menuitem);
 		gtk_widget_set_sensitive(menuitem, FALSE);
@@ -3698,9 +3647,6 @@ create_add_panel_submenu (gboolean tearoff)
 			   GINT_TO_POINTER(FOOBAR_PANEL));
  	
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Edge panel"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem), "activate",
@@ -3708,9 +3654,6 @@ create_add_panel_submenu (gboolean tearoff)
 			   GINT_TO_POINTER(EDGE_PANEL));
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Aligned panel"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem), "activate",
@@ -3718,9 +3661,6 @@ create_add_panel_submenu (gboolean tearoff)
 			   GINT_TO_POINTER(ALIGNED_PANEL));
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Sliding panel"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem), "activate",
@@ -3728,9 +3668,6 @@ create_add_panel_submenu (gboolean tearoff)
 			   GINT_TO_POINTER(SLIDING_PANEL));
 	
 	menuitem = gtk_menu_item_new ();
-	/* FIXME 
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Floating panel"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem), "activate",
@@ -4766,9 +4703,6 @@ add_radios_to_menu (GtkWidget *menu, NameIdEnum *items,
 
 	for (i=0; items[i].name; i++) {
 		menuitem = gtk_radio_menu_item_new (radio_group);
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		radio_group = gtk_radio_menu_item_group (
 			GTK_RADIO_MENU_ITEM (menuitem));
 		setup_menuitem (menuitem, NULL, _(items[i].name));
@@ -4796,9 +4730,6 @@ add_radio_menu (GtkWidget *menu, const char *menutext,
 	GtkWidget *submenu;
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, NULL, menutext);
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_object_set_data (GTK_OBJECT (menu), menu_key, menuitem);
@@ -4921,9 +4852,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	m = create_applets_menu(NULL, fake_submenus, TRUE);
 	if (m) {
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem, "gnome-applets.png",
 					   _("Applet"), SMALL_ICON_SIZE);
 
@@ -4936,9 +4864,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	}
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem, 
 				   "gnome-gmenu.png",
 				   _("Menu"), SMALL_ICON_SIZE);
@@ -4948,9 +4873,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	gtk_menu_item_set_submenu (GTK_MENU_ITEM (menuitem), submenu);
 
 	submenuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (submenuitem,
 				   "gnome-logo-icon-transparent.png",
 				   _("Main menu"), SMALL_ICON_SIZE);
@@ -4961,9 +4883,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(submenuitem, "MENU:MAIN");
 
 	submenuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (submenuitem, 
 				   "gnome-logo-icon-transparent.png",
 				   _("Programs menu"), SMALL_ICON_SIZE);
@@ -4974,9 +4893,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(submenuitem, "MENU:gnome/apps");
 
 	submenuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (submenuitem, "gnome-favorites.png",
 				   _("Favorites menu"), SMALL_ICON_SIZE);
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), submenuitem);
@@ -4986,9 +4902,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(submenuitem, "MENU:~/.gnome/apps");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem, 
 				   "launcher-program.png",
 				   _("Launcher..."), SMALL_ICON_SIZE);
@@ -4998,9 +4911,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "LAUNCHER:ASK");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem, "launcher-program.png",
 				   _("Launcher from menu"), SMALL_ICON_SIZE);
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
@@ -5010,9 +4920,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 			   GTK_SIGNAL_FUNC (submenu_to_display), NULL);
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem, 
 				   "panel-drawer.png",
 				   _("Drawer"), SMALL_ICON_SIZE);
@@ -5023,9 +4930,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "DRAWER:NEW");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem,
 				   "gnome-term-night.png",
 				   _("Log out button"), SMALL_ICON_SIZE);
@@ -5036,9 +4940,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "LOGOUT:NEW");
 	
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem, 
 				   "gnome-lockscreen.png",
 				   _("Lock button"), SMALL_ICON_SIZE);
@@ -5049,9 +4950,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "LOCK:NEW");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem,
 				   "gnome-run.png",
 				   _("Run button"), SMALL_ICON_SIZE);
@@ -5062,9 +4960,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "RUN:NEW");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 
 			gtk_image_new_from_stock (GTK_STOCK_ADD, GTK_ICON_SIZE_MENU),
 			_("Swallowed app..."));
@@ -5074,9 +4969,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	setup_internal_applet_drag(menuitem, "SWALLOW:ASK");
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem(menuitem, 0, _("Status dock"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem), "activate",
@@ -5087,9 +4979,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	 * FIXME: only a temporary testing menuitem
 	 */
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Test Applet"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect (GTK_OBJECT (menuitem), "activate",
@@ -5099,9 +4988,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	 * FIXME: only a temporary testing menuitem
 	 */
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Test Bonobo Applet"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect (GTK_OBJECT (menuitem), "activate",
@@ -5112,9 +4998,6 @@ make_add_submenu (GtkWidget *menu, gboolean fake_submenus)
 	 * FIXME: only a temporary testing menuitem
 	 */
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem, 0, _("Fish Applet"));
 	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
 	gtk_signal_connect (GTK_OBJECT (menuitem), "activate",
@@ -5227,9 +5110,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 
 	if ( ! commie_mode) {
 		menuitem = gtk_menu_item_new ();
-		/* FIXME 
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem (menuitem,
 				gtk_image_new_from_stock (GTK_STOCK_ADD, GTK_ICON_SIZE_MENU),
 				_("Add to panel"));
@@ -5246,9 +5126,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 		make_add_submenu (submenu, fake_submenus);
 
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem (menuitem, 
 				gtk_image_new_from_stock (GTK_STOCK_NEW, GTK_ICON_SIZE_MENU),
 				_("Create panel"));
@@ -5257,9 +5134,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 					   create_add_panel_submenu(TRUE));
 
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 
 		setup_menuitem (menuitem, 
 				gtk_image_new_from_stock (GTK_STOCK_REMOVE, GTK_ICON_SIZE_MENU),
@@ -5276,9 +5150,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 
 		if (is_basep) {
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem, 
 					gtk_image_new_from_stock (GTK_STOCK_PROPERTIES,
 								  GTK_ICON_SIZE_MENU),
@@ -5289,9 +5160,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 			gtk_menu_item_set_submenu (GTK_MENU_ITEM (menuitem), submenu);
 
 			submenuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (submenuitem,
 					gtk_image_new_from_stock (GTK_STOCK_PROPERTIES,
 								  GTK_ICON_SIZE_MENU),
@@ -5307,9 +5175,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 		}
 
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem (menuitem,
 				gtk_image_new_from_stock (GTK_STOCK_PREFERENCES,
 							  GTK_ICON_SIZE_MENU),
@@ -5320,9 +5185,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 				    NULL);
 
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem,
 					   "gnome-gmenu.png",
 					   _("Edit menus..."), SMALL_ICON_SIZE);
@@ -5333,9 +5195,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 
 		if ( ! global_config.menu_check) {
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem (menuitem,
 					NULL,
 					_("Reread all menus"));
@@ -5349,9 +5208,6 @@ make_panel_submenu (GtkWidget *menu, gboolean fake_submenus, gboolean is_basep)
 	}
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem,
 			gtk_image_new_from_stock (GTK_STOCK_HELP,
 						  GTK_ICON_SIZE_MENU),
@@ -5446,9 +5302,6 @@ create_panel_submenu(GtkWidget *menu, gboolean fake_submenus, gboolean tearoff,
 	make_panel_submenu (menu, fake_submenus, is_basep);
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem (menuitem,
 			gtk_image_new_from_stock (GNOME_STOCK_ABOUT, GTK_ICON_SIZE_MENU),
 			_("About the panel..."));
@@ -5463,9 +5316,6 @@ create_panel_submenu(GtkWidget *menu, gboolean fake_submenus, gboolean tearoff,
 
 	if (char_tmp) {
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem (menuitem,
 				gtk_image_new_from_stock (GNOME_STOCK_ABOUT, GTK_ICON_SIZE_MENU),
 				_("About GNOME..."));
@@ -5503,9 +5353,6 @@ create_desktop_menu (GtkWidget *menu, gboolean fake_submenus, gboolean tearoff)
 	char_tmp = g_find_program_in_path ("xscreensaver");
 	if (char_tmp) {	
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem,
 					   "gnome-lockscreen.png",
 					   _("Lock screen"), SMALL_ICON_SIZE);
@@ -5520,9 +5367,6 @@ create_desktop_menu (GtkWidget *menu, gboolean fake_submenus, gboolean tearoff)
 	g_free (char_tmp);
 
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem,
 				   "gnome-term-night.png",
 				   _("Log out"), SMALL_ICON_SIZE);
@@ -5557,9 +5401,6 @@ add_distribution_submenu (GtkWidget *root_menu, gboolean fake_submenus,
 					TRUE, TRUE, launcher_add,
 					favourites_add);
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_try_pixmap (menuitem,
 				   distribution_info->menu_icon,
 				   _(distribution_info->menu_name), size);
@@ -5598,9 +5439,6 @@ add_kde_submenu (GtkWidget *root_menu, gboolean fake_submenus,
 	}
 	g_free (pixmap_path);
 	menuitem = gtk_menu_item_new ();
-	/* FIXME
-	gtk_widget_lock_accelerators (menuitem);
-	*/
 	setup_menuitem_with_size (menuitem, pixmap, _("KDE menus"),
 				  size);
 	gtk_menu_shell_append (GTK_MENU_SHELL (root_menu), menuitem);
@@ -5699,9 +5537,6 @@ create_root_menu (GtkWidget *root_menu,
 					  FALSE /* launcher_add */,
 					  FALSE /* favourites_add */);
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem,
 					   "gnome-logo-icon-transparent.png",
 					   _("Programs"), size);
@@ -5723,9 +5558,6 @@ create_root_menu (GtkWidget *root_menu,
 				 FALSE /* launcher_add */,
 				 FALSE /* favourites_add */);
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem, "gnome-favorites.png",
 					   _("Favorites"), size);
 		gtk_menu_shell_append (GTK_MENU_SHELL (root_menu), menuitem);
@@ -5739,9 +5571,6 @@ create_root_menu (GtkWidget *root_menu,
 		menu = create_applets_menu(NULL, fake_submenus, FALSE);
 		if (menu) {
 			menuitem = gtk_menu_item_new ();
-			/* FIXME
-			gtk_widget_lock_accelerators (menuitem);
-			*/
 			setup_menuitem_try_pixmap (menuitem, "gnome-applets.png",
 			                           _("Applets"), size);
 			gtk_menu_shell_append (GTK_MENU_SHELL (root_menu), menuitem);
@@ -5764,9 +5593,6 @@ create_root_menu (GtkWidget *root_menu,
 
 	if ( ! no_run_box) {
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem, "gnome-run.png", 
 					   _("Run..."), size);
 		gtk_signal_connect (GTK_OBJECT (menuitem), "activate",
@@ -5783,9 +5609,6 @@ create_root_menu (GtkWidget *root_menu,
 	if (flags & MAIN_MENU_PANEL_SUB) {
 		menu = create_panel_submenu (NULL, fake_submenus, TRUE, is_basep);
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem, "gnome-panel.png", 
 					   _("Panel"), SMALL_ICON_SIZE);
 		gtk_menu_shell_append (GTK_MENU_SHELL (root_menu), menuitem);
@@ -5794,9 +5617,6 @@ create_root_menu (GtkWidget *root_menu,
 	if (flags & MAIN_MENU_DESKTOP_SUB) {
 		menu = create_desktop_menu (NULL, fake_submenus, TRUE);
 		menuitem = gtk_menu_item_new ();
-		/* FIXME
-		gtk_widget_lock_accelerators (menuitem);
-		*/
 		setup_menuitem_try_pixmap (menuitem, "gnome-ccdesktop.png",
 					   _("Desktop"), SMALL_ICON_SIZE);
 		gtk_menu_shell_append (GTK_MENU_SHELL (root_menu), menuitem);
