@@ -1,5 +1,10 @@
 2001-11-21  Mark McLoughlin  <mark@skynet.ie>
 
+	* menu.c: kill gtk_widget_lock_accelerator 
+	usage completely.
+
+2001-11-21  Mark McLoughlin  <mark@skynet.ie>
+
 	* Makefile.am: add panel-applet.c to libpanel-applet 
 	sources - hmmm.
 
